<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtAction1_Welcome"
        android:layout_width="129dp"
        android:layout_height="39dp"
        android:layout_marginTop="39dp"
        android:text="@string/Action1_Welcome"
        android:textAlignment="center"
        android:textSize="60px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtActions1_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/Action1_Description"
        android:textAlignment="center"
        android:textSize="60px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAction1_Welcome" />

    <Button
        android:id="@+id/btnAction1_GetRecords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Action1_buttonGetRecords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtActions1_Description" />

    <TextView
        android:id="@+id/Action1_txtRecordResults"
        android:layout_width="394dp"
        android:layout_height="427dp"
        android:layout_marginTop="37dp"
        android:text="@string/Action1_DummyText"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAction1_GetRecords" />


</androidx.constraintlayout.widget.ConstraintLayout>